// Top-level build file where you can add configuration options common to all sub-projects/modules.

buildscript {
    ext.kotlin_version = '1.8.22'
    repositories {
        google()
        mavenCentral()
        mavenLocal()
        maven {
            url = 'https://maven.google.com/'
            name = 'Google'
        }
        maven { url = "https://oss.sonatype.org/content/repositories/snapshots" }
        maven { url = "https://repo.maven.apache.org/maven2" }
    }
    dependencies {
            classpath "com.android.tools.build:gradle:${project.property('android-plugin.version')}"
            classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
    }
}

// Set up the spotbugs plugin so we can apply it in a quality pass if needed
plugins {
    id  'com.github.spotbugs' version '6.2.3' apply false
}

allprojects {
    
    // NOTE: project.group and project.version must be defined before including
    // maven-support.gradle since it uses these values...
    project.group = ( project.hasProperty('pom.groupId')
            ? project.property('pom.groupId') : "" )

    project.version =
            ( project.hasProperty('pom.version') ? project.property('pom.version') : "1.0" )

    // forces all changing dependencies (i.e. SNAPSHOTs) to automagicially download
    // (thanks, @BillBarnhill!)
    configurations.all {
        resolutionStrategy {
            cacheChangingModulesFor 0, 'seconds'
        }
    }

    

    tasks.withType(JavaCompile) {
        options.encoding = "UTF-8"
    }


}
subprojects {
    afterEvaluate { project ->
        if (project.plugins.hasPlugin('com.android.application') || project.plugins.hasPlugin('com.android.library')) {
            android {
                compileOptions {
                    sourceCompatibility JavaVersion.VERSION_11
                    targetCompatibility JavaVersion.VERSION_11
                }
            }
        }
    }
}

// root build.gradle
gradle.afterProject { project ->
    project.afterEvaluate {
        tasks.matching { task ->
            task.name.startsWith("publish") &&
                    task.name.endsWith("PublicationToMavenLocal") &&
                    task.name.contains("PdZipPublication")
        }.configureEach { publishTask ->
            if (tasks.findByName("distZip")) {
                publishTask.dependsOn tasks.named("distZip")
            }
        }
    }
}

